# Qt6_boilerplate

./: CMakeLists.txt  README.md  main.cpp  main.qml
